--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-body {
+/* body {
   background-image: url('./assets/images/5KNdUG.jpg');
   background-size: cover;
   height: 100vh;
-}
+} */
 
 .title {
   text-align: center;
