--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,4 @@
-/* body {
-  background-image: url('./assets/images/5KNdUG.jpg');
-  background-size: cover;
-  height: 100vh;
-} */
-
-.title {
-  text-align: center;
-  color: blue;
+body {
+  margin: 0;
+  padding: 0;
 }
