add arrow styling for expanded view component. This includes absolutely positioning the arrows, removing any styling they had, and moving the icon carousel to the bottom of the images. Still need to figure out how to stretch the images to fit the entire size of the container. Maybe could make the image the background of the parent div, ran out of time.

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,21 @@ body {
   font-size: large;
   font-weight: bold;
 }
+
+.expanded-image-left {
+  all: unset;
+  position: absolute;
+  top: 330px;
+  left: 30px;
+  font-size: large;
+  font-weight: bold;
+}
+
+.expanded-image-right {
+  all: unset;
+  position: absolute;
+  top: 330px;
+  right: 200px;
+  font-size: large;
+  font-weight: bold;
+}
