--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
 .image-left {
   all: unset;
   position: relative;
-  left: 90px;
+  left: 20px;
+  color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
 }
@@ -14,7 +15,8 @@ body {
 .image-right {
   all: unset;
   position: relative;
-  left: -35px;
+  left: 60px;
+  color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
 }
@@ -23,6 +25,7 @@ body {
   all: unset;
   position: relative;
   left: 30px;
+  color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
 }
@@ -31,6 +34,7 @@ body {
   all: unset;
   position: relative;
   right: 30px;
+  color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
 }
@@ -50,8 +54,11 @@ body {
 .restore-default {
   all: unset;
   position: relative;
+  color: rgb(222, 99, 23);
   top: -210px;
   left: -60px;
+  font-size: large;
+  font-weight: bold;
 }
 
 .partly-filled-star {
@@ -70,6 +77,7 @@ body {
   height: 0;
   width: 0;
   position: relative;
+  color: rgb(222, 99, 23);
   right: -48px;
   top: -68px
 }
