--- a/src/components/ratingsAndReviews/AddReviewModal.css
+++ b/src/components/ratingsAndReviews/AddReviewModal.css
@@ -6,7 +6,8 @@
   background-color: orangered;
   padding: 50%;
   z-index: 1000;
-  min-width: 500px;
+  min-width: auto;
+  overflow: auto;
 }
 
 .reccomend-style {
