--- a/src/components/ratingsAndReviews/ReviewPhotos.css
+++ b/src/components/ratingsAndReviews/ReviewPhotos.css
@@ -1,7 +1,28 @@
-.photos {
+.small-photo {
   height: 5em;
   width: 5em;
   border: 2px solid #ccc;
   border-radius: 20px;
   margin: 5px;
+}
+
+.large-photo {
+  display: block;
+  width: 80%;
+  height: 80%;
+  overflow: auto;
+  margin: auto;
+
+}
+
+.modal {
+  z-index: 1000;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0, 0, 0, 0.9);
 }
