added product characteristics chart

--- a/src/components/ratingsAndReviews/RatingsDisplay/RatingsDisplayChart.css
+++ b/src/components/ratingsAndReviews/RatingsDisplay/RatingsDisplayChart.css
@@ -20,3 +20,14 @@
 
 }
 
+.poor {
+  margin-right: 7em;
+  font-size: small;
+}
+.great {
+  font-size: small;
+}
+
+.characteristics-chart {
+  align-content: right;
+}
