--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,31 @@ body {
     opacity: 1;
   }
 }
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0
+  }
+}
+
+.hidden-img {
+  display: none;
+}
+
+.default-img {
+  object-fit: contain;
+  max-height: 100%;
+  max-width: 75%;
+  position: relative;
+  box-shadow: 0 0 5px black;
+  left: 40px;
+  border-radius: 3px;
+  cursor: zoom-in;
+  animation-duration: 500ms;
+  animation-name: fadeIn;
+  animation-iteration-count: 1;
+};
+
