--- a/src/components/ratingsAndReviews/ReviewList/ReviewList.css
+++ b/src/components/ratingsAndReviews/ReviewList/ReviewList.css
@@ -1,25 +1,33 @@
-.review-list {
-  scroll-behavior: smooth;
-  max-height: 500px;
-  overflow: auto;
-  border: 2px solid #000;
-  margin: 1em;
-  margin-left: 40%;
-}
-
 .main {
   border: 2px solid #000;
   margin: 1em;
   overflow: auto;
+  display: flex;
+  max-height: 70em;
+  width: auto;
 }
+
+.review-list {
+  scroll-behavior: smooth;
+  max-height: 40em;
+  overflow: auto;
+  border: 2px solid #000;
+  margin: 1em;
+  width: 100%;
+  /* margin-left: 40%; */
+}
+
 .review-list-btn{
   display: flex;
 }
 
 .title-sortbar {
   margin: 1em;
+  display: flex;
+  flex-direction: row-reverse;
+
 }
 
-/* .ratings-breakdown {
+.ratings-breakdown {
 
-} */
+}
