--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@ body {
 
 .image-left {
   all: unset;
-  position: relative;
-  left: 20px;
   color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
@@ -20,8 +18,6 @@ body {
 
 .image-right {
   all: unset;
-  position: relative;
-  left: 60px;
   color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
@@ -34,8 +30,7 @@ body {
 
 .expanded-image-left {
   all: unset;
-  position: relative;
-  left: 30px;
+  margin-right: 10px;
   color: rgb(222, 99, 23);
   font-size: large;
   font-weight: bold;
@@ -48,9 +43,8 @@ body {
 
 .expanded-image-right {
   all: unset;
-  position: relative;
-  right: 30px;
   color: rgb(222, 99, 23);
+  margin-left: 10px;
   font-size: large;
   font-weight: bold;
   text-shadow: 0px 0px 1px black;
@@ -71,9 +65,8 @@ body {
 .restore-default {
   all: unset;
   position: relative;
+  left: 40px;
   color: rgb(222, 99, 23);
-  top: -210px;
-  left: -65px;
   font-size: large;
   font-weight: bold;
   text-shadow: 0px 0px 1px black;
@@ -148,12 +141,13 @@ body {
 }
 
 .default-img {
-  object-fit: contain;
-  max-height: 100%;
-  max-width: 75%;
-  position: relative;
+  object-fit: cover;
+  overflow: hidden;
+  height: 80vh;
+  width: 60%;
+  margin-top: 10px;
+  margin-bottom: 10px;
   box-shadow: 0 0 5px black;
-  left: 40px;
   border-radius: 3px;
   cursor: zoom-in;
   animation-duration: 500ms;
