--- a/src/components/ratingsAndReviews/ReviewList/Reviews.css
+++ b/src/components/ratingsAndReviews/ReviewList/Reviews.css
@@ -1,20 +1,21 @@
 .review-tile {
   margin: 20px;
   border: 2px solid #000;
+  border-radius: 10px;
   min-height: auto;
-
+  /* width: auto; */
 }
 
 .review-summary {
   font-weight: bold;
   margin: 0 10px 0 10px;
-  width: auto;
+  /* width: auto; */
 }
 
 .review-body {
   margin: 10px 10px 0 10px;
   min-height: 40px;
-  width: auto;
+  /* width: auto; */
   overflow-wrap: break-word;
 }
 
@@ -27,7 +28,7 @@
 .review-date {
   margin: 0 0 10px 5px;
   min-height: 20px;
-  width: 500px;
+  /* width: auto; */
 }
 
 .review-recommend {
