--- a/src/components/ratingsAndReviews/ReviewList/ReviewList.css
+++ b/src/components/ratingsAndReviews/ReviewList/ReviewList.css
@@ -1,6 +1,8 @@
 .main {
-  border: 2px solid #000;
+  /* border: 2px solid #000; */
+  border-top: 2px solid rgba(0, 0, 0, .5);
   margin: 1em;
+  padding: 1em;
   overflow: auto;
   display: flex;
   height: 35em;
@@ -9,24 +11,25 @@
 }
 
 .title-sortbar {
-  margin: 1em;
+  margin: 1em 0 0 0;
   display: flex;
   flex-direction: row-reverse;
+  width: 100%;
 }
 
 .review-list {
-  max-height: auto;
+  max-height: 100%;
   overflow: auto;
-  border: 2px solid #000;
-  margin: 1em;
+  /* border: 2px solid #000; */
+  /* margin: 1em; */
   height: max-content;
   flex-grow: 2;
-
+  width: 100%;
 }
 
 .reviews {
+  max-height: 100%;
   overflow: auto;
-  height: auto;
 }
 
 .review-list-btn {
@@ -35,8 +38,23 @@
   top: -10px;
 }
 
+.showmore-btn {
+  border: 1px solid #000;
+  border-radius: 5px;
+  background: rgb(59, 167, 184);
+  color: #fff;
+  padding: 5px;
+  margin: 5px;
+}
+
+.showmore-btn:hover {
+  background: white;
+  color: rgb(59, 167, 184);
+}
+
 
 
 .ratings-breakdown {
   flex-grow: 1;
+
 }
