--- a/src/components/ratingsAndReviews/ReviewList/Reviews.css
+++ b/src/components/ratingsAndReviews/ReviewList/Reviews.css
@@ -1,6 +1,6 @@
 .review-tile {
-  margin: 20px;
-  border: 2px solid #000;
+  margin: 10px 0 10px 0;
+  border: 1px solid #000;
   border-radius: 10px;
   min-height: auto;
   /* width: auto; */
@@ -8,12 +8,12 @@
 
 .review-summary {
   font-weight: bold;
-  margin: 0 10px 0 10px;
+  /* margin: 0 10px 0 10px; */
   /* width: auto; */
 }
 
 .review-body {
-  margin: 10px 10px 0 10px;
+  /* margin: 10px 0 0 10px; */
   min-height: 40px;
   /* width: auto; */
   overflow-wrap: break-word;
@@ -26,7 +26,7 @@
 }
 
 .review-date {
-  margin: 0 0 10px 5px;
+  /* margin: 0 0 10px 5px; */
   min-height: 20px;
   /* width: auto; */
 }
