--- a/src/index.css
+++ b/src/index.css
@@ -141,10 +141,10 @@ body {
 }
 
 .default-img {
-  object-fit: cover;
+  object-fit: contain;
   overflow: hidden;
-  height: 80vh;
-  width: 60%;
+  max-height: 80vh;
+  max-width: 70%;
   margin-top: 10px;
   margin-bottom: 10px;
   box-shadow: 0 0 5px black;
