--- a/src/components/ratingsAndReviews/RatingsDisplay/RatingsCharacteristicsChart.css
+++ b/src/components/ratingsAndReviews/RatingsDisplay/RatingsCharacteristicsChart.css
@@ -1,13 +1,15 @@
 .characteristics-chart {
   align-content: right;
+  margin: 10px 0 10px 0;
 }
 
 .char-bar {
   position: relative;
   height: 5px;
-  width: 150px;
+  width: 18em;
   border: 1px solid;
   background-color: gray;
+  box-shadow: 2px 2px 4px #000000;
 }
 
 .ratings-inner-icon {
@@ -19,10 +21,11 @@
   border-top: 10px solid rgb(2, 209, 2);
 }
 
-.poor {
-  margin-right: 7em;
+.bad-tag {
+  /* margin-right: 15em; */
   font-size: small;
 }
-.great {
+.good-tag {
   font-size: small;
+  float: right;
 }
