--- a/src/components/ratingsAndReviews/RatingsDisplay/RatingsDisplayChart.css
+++ b/src/components/ratingsAndReviews/RatingsDisplay/RatingsDisplayChart.css
@@ -1,22 +1,23 @@
 .ratings-bar {
   position: relative;
   height: 15px;
-  width: 150px;
+  width: 18em;
   border: 1px solid;
   background-color: gray;
+  box-shadow: 1px 1px 2px #000000;
 }
 
 .ratings-innerbar {
   position: relative;
-  background-color: green;
+  background-color: rgb(1, 172, 1);
   height: 14px;
   width: 100%;
-  border: 1px solid
+  border: 1px solid;
+  box-shadow: 2px 2px 4px #aeaeae;
 }
 
 .ratings {
- padding-left: 3em;
  font-size: small;
-
+ float: right;
 }
 
