--- a/src/components/ratingsAndReviews/ReviewList/ReviewList.css
+++ b/src/components/ratingsAndReviews/ReviewList/ReviewList.css
@@ -3,7 +3,7 @@
   border-top: 2px solid rgba(0, 0, 0, .5);
   margin: 1em;
   padding: 1em;
-  overflow: auto;
+
   display: flex;
   height: 35em;
   max-height: 35em;
@@ -19,16 +19,13 @@
 
 .review-list {
   max-height: 100%;
-  overflow: auto;
-  /* border: 2px solid #000; */
-  /* margin: 1em; */
   height: max-content;
   flex-grow: 2;
   width: 100%;
 }
 
 .reviews {
-  max-height: 100%;
+  height: 35em;
   overflow: auto;
 }
 
@@ -57,4 +54,8 @@
 .ratings-breakdown {
   flex-grow: 1;
 
+}
+
+.review-photos {
+  display: flex;
 }
