--- a/src/components/ratingsAndReviews/AddReview/AddReviewModal.css
+++ b/src/components/ratingsAndReviews/AddReview/AddReviewModal.css
@@ -9,9 +9,7 @@
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.4);
-  /* justify-content: center;
-  align-items: center;
-  margin: auto; */
+  z-index: 1000;
 }
 
 .modal-header {
