style light/dark mode button, finish styling nav bar, fix bug where nav bar was extending too far across screen with overflow-x: hidden

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family:'Roboto',sans-serif;
   background-color: rgb(248, 249, 250);
+  width: auto;
+  overflow-x: hidden;
 }
 
 .image-left {
@@ -156,3 +162,28 @@ body {
   box-shadow: 0 0 5px rgb(59, 167, 184);
 }
 
+.dark-mode-btn {
+  all: unset;
+  display: flex;
+  background-color: rgb(248, 249, 250);
+  color: black;
+  justify-content: space-between;
+  align-items: center;
+  font-size: small;
+  height: max-content;
+  width: max-content;
+  padding:0.35em 1.2em;
+  border:0.1em solid black;
+  margin:0 0.3em 0.3em 0;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: 0 0 2px black;
+  text-decoration:none;
+  text-align: center;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+}
+
+.dark-mode-btn:hover {
+  box-shadow: 0 0 5px rgb(59, 167, 184);
+}
