make expanded image exit out button larger, add a div and flex it to the right so it is always in top right corner

--- a/src/index.css
+++ b/src/index.css
@@ -71,10 +71,10 @@ body {
 
 .restore-default {
   all: unset;
-  position: relative;
-  left: 40px;
+  margin-right: 13px;
+  margin-top: 5px;
   color: rgba(222, 99, 23, .9);
-  font-size: large;
+  font-size: x-large;
   font-weight: bold;
   text-shadow: 0px 0px 1px black;
 }
